--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,5 @@
 # suppress inspection "SpringBootApplicationProperties"
 book.stock.microservice.apiUrl=http://localhost:8081/api/v1
+spring.activemq.broker-url=tcp://localhost:61616
+spring.activemq.user=admin
+spring.activemq.password=admin
