--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
+spring.h2.console.enabled=true
 # suppress inspection "SpringBootApplicationProperties"
-book.stock.microservice.apiUrl=http://localhost:8081/api/v1
+book.store.microservice.apiUrl=http://localhost:8081/api/v1
 spring.activemq.broker-url=tcp://localhost:61616
 spring.activemq.user=admin
 spring.activemq.password=admin
